JG-2004-02-04-4: Testsuite: Fixed system_tests/clients/qmod/general, del_queue, 
                            cleanup of queue functions.

SG-2004-03-04-1: Bugfix:    the update list event has to be delivered allways.
                            In case, that all elements got removed due to 
                            filtering, the event was not sent. This is changed.
                 Changed:   qmaster
                 Review:    DT

SG-2004-02-04-0: Bugfix:    - qdel "*" deleted only some jobs but not all.
                            - the max deletion time in qmaster is set to 3
                              seconds.
                 Changed:   qdel, qmaster
                 Review:    DT

AS-2004-02-04-0: Enhancem.: "aimk -32" creates Solaris 32 bit binaries on 64
                            bit kernel

JG-2004-02-04-3: Testsuite: Fixed system_tests/clients/qrsh and functions
                            enabling and disabling queues.

AA-2004-02-04-0: Bugfix:    fixed AIX51 spinbox compile problem 

JG-2004-02-04-2: Bugfix:    Fixed build of rshd on Solaris 7 32 bit.
                 Review:    pending

DT-2004-02-04-0: Bugfix:    Fixed JAPI session initialization bug which caused
                            qsub to segfault if exiting due to failed job
                            submission.
                 Changed:   JAPI
                 Review:    SG

JG-2004-02-04-1: Testsuite: fixed testsuite for SGE 5.3

JG-2004-02-04-0: Enhancem.: Added a utility to dump the list of objects in the
                            Berkeley DB database, dump objects and delete 
                            objects.
                 Review:    pending

SG-2004-02-03-1: Bugfix:    qacct only worked on queues and queue instances,
                            which are currently in the system. Removed ones
                            were not accessable. This is changed.
                 Changed:   qacct
                 Review:    EB
