@@ -1,3 +1,5 @@
+JG-2004-02-05-0: Testsuite: Fixed functional/tight_integration.
+
 JG-2004-02-04-4: Testsuite: Fixed system_tests/clients/qmod/general, del_queue, 
                             cleanup of queue functions.
 
@@ -22,7 +24,7 @@ JG-2004-02-04-3: Testsuite: Fixed system_tests/clients/qrsh and functions
 AA-2004-02-04-0: Bugfix:    fixed AIX51 spinbox compile problem 
 
 JG-2004-02-04-2: Bugfix:    Fixed build of rshd on Solaris 7 32 bit.
-                 Review:    pending
+                 Review:    AS
 
 DT-2004-02-04-0: Bugfix:    Fixed JAPI session initialization bug which caused
                             qsub to segfault if exiting due to failed job
